# BadWeatherMountTester

./: .flake8  .gitattributes  .gitignore  .markdownlint.yml  CHANGELOG.md  CONTRIBUTING.md  Claude.md  README.md  TODO  TODO.md  babel.cfg  justfile  pyproject.toml  setup-default.yml  setup-example.yml  setup.yml  zensical-de.toml  zensical-en.toml  zensical.toml
.claude/: settings.local.json
.githooks/: pre-commit
.github/: release.yml
.github/workflows/: docs.yml  python-app.yml  release.yml
docs/: index.md  manual.md  prerequisits.md
docs/de/: index.md  manual.md  prerequisits.md  reference.md
docs/de/javascripts/: mathjax.js
docs/en/: manual.md  reference.md
docs/root/: index.md
src/badweathermounttester/: __init__.py  __main__.py  app.py  config.py  display.py  geometry.py  logging_errors.ini  logging_setup.py  logging_verbose.ini  server.py
src/badweathermounttester/templates/: index.html
src/badweathermounttester/translations/: messages.pot
src/badweathermounttester/translations/de/LC_MESSAGES/: messages.mo  messages.po
src/badweathermounttester/translations/fr/LC_MESSAGES/: messages.mo  messages.po
tests/: __init__.py  test_config.py
